@@ -1,8 +1,10 @@
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-graal"
     annotationProcessor "io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion"
 
     compileOnly "io.micronaut:micronaut-inject-java"
+    compileOnly "org.graalvm.nativeimage:svm"
     compileOnly "org.grails:grails-datastore-gorm-hibernate5:$gormHibernateVersion"
 
     api "org.flywaydb:flyway-core:$flywayVersion"
