@@ -1,0 +1,2 @@
+Args = -H:IncludeResources=org/flywaydb/core/internal/version.txt \
+       --initialize-at-run-time=org.flywaydb.core.internal.util.FeatureDetector
